force-app/main/default/objects/Account/fields/Source_System_Name__c.field-meta.xml
<CustomField>
    <fullName>Source_System_Name__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_OCV</complianceGroup>
    <description>Source System Name of Party received from OCV (E.g. CAP)</description>
    <externalId>true</externalId>
    <label>Source System Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>