force-app/main/default/objects/Account/fields/Survivor_Party_ID__c.field-meta.xml
<CustomField>
    <fullName>Survivor_Party_ID__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_OCV</complianceGroup>
    <description>Field to save External ID of Survivor Party in an event of OCV merge</description>
    <inlineHelpText>External ID of Survivor Party in an event of OCV merge</inlineHelpText>
    <label>Survivor Party ID</label>
    <length>150</length>
    <type>Text</type>
</CustomField>