force-app/main/default/objects/Account/fields/Tax_Exemption_Type__c.field-meta.xml
<CustomField>
    <fullName>Tax_Exemption_Type__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_OCV</complianceGroup>
    <description>This Value determine TFN and TFN Exemption of the Customer.</description>
    <label>Tax Exemption Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NO TIN</fullName>
                <label>NO TFN/TIN - Party opted not to provide a TFN/TIN - Depending on the jurisdiction this is perfectly acceptable/legal. E.g. Australia</label>
            </value>
            <value>
                <fullName>CHILD</fullName>
                <label>CHILD - The party is a minor/child and not required to provide a TFN/TIN</label>
            </value>
            <value>
                <fullName>AGE PENSION</fullName>
                <label>AGE PENSION - Exemption for people on the age service, including veterans and invalid pension.</label>
            </value>
            <value>
                <fullName>OTHER GOVERNMENT PENSION</fullName>
                <label>OTHER GOVERNMENT PENSION - Exemption for people on any other eligible pension or benefit e.g. supporting parent&apos;s pension, widow&apos;s pension.</label>
            </value>
            <value>
                <fullName>TAX EXEMPT</fullName>
                <label>TAX EXEMPT - Exemption for entities not required to lodge an income tax return e.g. charities</label>
            </value>
            <value>
                <fullName>BANK ORG</fullName>
                <label>BANK ORG - The party is recognised as a bank and TFN/TIN is not applicable</label>
            </value>
            <value>
                <fullName>NON RESIDENT</fullName>
                <label>NON RESIDENT - The party is a NON RESIDENT of the given jurisdiction</label>
            </value>
            <value>
                <fullName>ABN LODGED</fullName>
                <label>ABN LODGED - The party lodged an Australian Business Number (ABN) in lieu of a TFN/TIN</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>