force-app/main/default/objects/Account/fields/Temporary_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Temporary_External_Id__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_OCV</complianceGroup>
    <description>New field to temporarily store External_Id__c field value</description>
    <externalId>true</externalId>
    <label>Temporary External Id</label>
    <length>150</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>