force-app/main/default/objects/Account/fields/TFN_Verification__c.field-meta.xml
<CustomField>
    <fullName>TFN_Verification__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_OCV</complianceGroup>
    <description>This Value determine TFN and TFN Exemption of the Customer.</description>
    <label>TFN Verification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>V</fullName>
                <label>VALID TFN - 8 OR 9 DIGIT AUST TAX FILE NUMBER SUPPLIED BY THE CUSTOMER</label>
            </value>
            <value>
                <fullName>I</fullName>
                <label>INVALID TFN - THE TFN SUPPLIED BY THE CUSTOMER DID NOT PASS THE ATO ALGORITHM</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>