force-app/main/default/objects/Account/fields/UUID__c.field-meta.xml
<CustomField>
    <fullName>UUID__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information</complianceGroup>
    <description>Unique external ID of the customer</description>
    <label>UUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>