force-app/main/default/objects/Account/fields/Victim_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Victim_External_ID__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_OCV</complianceGroup>
    <description>Stores External ID of the Victim record that is merged into this record.</description>
    <label>Victim External ID</label>
    <length>150</length>
    <type>Text</type>
</CustomField>