force-app/main/default/objects/Account/fields/Victim_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Victim_Record_ID__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - OCV</complianceGroup>
    <description>Stores Salesforce record ID of the victim when it&apos;s merged into this record.</description>
    <label>Victim Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>