force-app/main/default/objects/Account/fields/VOI_Expiry_Date_Classic__c.field-meta.xml
<CustomField>
    <fullName>VOI_Expiry_Date_Classic__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_OCV</complianceGroup>
    <description>Verification of Identity of selfie as sourced from iKnow for Classic customers</description>
    <encryptionScheme>None</encryptionScheme>
    <label>VOI Expiry Date (Classic)</label>
    <type>Date</type>
</CustomField>