force-app/main/default/objects/Account/fields/Worldline_Merchant__c.field-meta.xml
<CustomField>
    <fullName>Worldline_Merchant__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Sensitive_Personal_Information;Source_OCV</complianceGroup>
    <description>This field is in sync with the OCV</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Worldline Merchant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>