force-app/main/default/objects/Account/recordTypes/CLG.recordType-meta.xml
<RecordType>
    <fullName>CLG</fullName>
    <active>true</active>
    <label>CLG</label>
</RecordType>