force-app/main/default/objects/Account/validationRules/MLCRM_Prevent_Customer_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>MLCRM_Prevent_Customer_Name</fullName>
    <active>true</active>
    <description>CC-5187 Customer Name is Read-Only for ANZ ML Standard User</description>
    <errorConditionFormula>AND(
$Setup.Salesforce_Library_Settings__c.Disable_VRs__c = false,
$Profile.Name = &apos;ANZ ML Standard User&apos;,
OR(RecordType.DeveloperName = &apos;PersonAccount&apos;, RecordType.DeveloperName = &apos;Business_Account&apos;),
OR(ISCHANGED(Name),
ISCHANGED(Salutation),
ISCHANGED(FirstName),
ISCHANGED(LastName),
ISCHANGED(MiddleName),
ISCHANGED(Suffix),
ISCHANGED(Suffix__pc)),
OCV_Event_Version__c &lt;&gt; 0
)</errorConditionFormula>
    <errorMessage>Customer Name cannot be updated.</errorMessage>
</ValidationRule>