force-app/main/default/objects/Account/validationRules/MLCRM_Prevent_Future_BirthDate.validationRule-meta.xml
<ValidationRule>
    <fullName>MLCRM_Prevent_Future_BirthDate</fullName>
    <active>true</active>
    <description>CC-5112 Prevent BirthDate is in Future</description>
    <errorConditionFormula>AND(
$Setup.Salesforce_Library_Settings__c.Disable_VRs__c = false,
RecordType.DeveloperName = &apos;PersonAccount&apos;, 
NOT(ISNULL(PersonBirthdate)),
(ISNEW() || ISCHANGED(PersonBirthdate)),
PersonBirthdate &gt;  TODAY()
)</errorConditionFormula>
    <errorDisplayField>PersonBirthdate</errorDisplayField>
    <errorMessage>Date of Birth cannot be in the future.</errorMessage>
</ValidationRule>