force-app/main/default/objects/Account/validationRules/OCV_Event_Version_Should_Be_Same.validationRule-meta.xml
<ValidationRule>
    <fullName>OCV_Event_Version_Should_Be_Same</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
$Setup.Salesforce_Library_Settings__c.Disable_VRs__c = false,
ISCHANGED(OCV_Event_Version__c),
NOT(ISNULL(OCV_Event_Version__c)),
$Permission.Can_Update_OCV_Event_Version
)</errorConditionFormula>
    <errorMessage>Customer Update failed: OCV Event Version mismatch</errorMessage>
</ValidationRule>