force-app/main/default/objects/Account/validationRules/OCVEventVersionShouldBeHigher.validationRule-meta.xml
<ValidationRule>
    <fullName>OCVEventVersionShouldBeHigher</fullName>
    <active>true</active>
    <description>Validation rule to enforce sequential OCV event versions.</description>
    <errorConditionFormula>AND(
$Setup.Salesforce_Library_Settings__c.Disable_VRs__c = false,
ISCHANGED(OCV_Event_Version__c),
OCV_Event_Version__c &lt; PRIORVALUE(OCV_Event_Version__c),
NOT(ISNULL(OCV_Event_Version__c))
)</errorConditionFormula>
    <errorDisplayField>OCV_Event_Version__c</errorDisplayField>
    <errorMessage>LOW VERSION: Event Version lower than existing Version.</errorMessage>
</ValidationRule>