force-app/main/default/objects/Account/validationRules/OCVEventVersionShouldStartFromOne.validationRule-meta.xml
<ValidationRule>
    <fullName>OCVEventVersionShouldStartFromOne</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
$Setup.Salesforce_Library_Settings__c.Disable_VRs__c = false,
ISNEW(),
$Permission.OCV_Integration_User,
OCV_Event_Version__c &lt;&gt; 1,
NOT(ISNULL(OCV_Event_Version__c)),
NOT(IsSnapshotInProgress__c),
NOT(IsSkeleton__c)
)</errorConditionFormula>
    <errorDisplayField>OCV_Event_Version__c</errorDisplayField>
    <errorMessage>DEFAULT VERSION: Event Version should begin from One.</errorMessage>
</ValidationRule>