force-app/main/default/objects/Account/validationRules/VR01_Restrict_Active_Customer_Deletion.validationRule-meta.xml
<ValidationRule>
    <fullName>VR01_Restrict_Active_Customer_Deletion</fullName>
    <active>true</active>
    <description>Restrict active customer record from getting deleted when mulesoft sends deleted from OCV flag.</description>
    <errorConditionFormula>AND(
$Setup.Salesforce_Library_Settings__c.Disable_VRs__c = false,
Deleted_in_OCV__c = true,
NOT(ISPICKVAL(FinServ__Status__c, &apos;Inactive&apos;))
)</errorConditionFormula>
    <errorMessage>You cannot attempt to delete active customer record</errorMessage>
</ValidationRule>