force-app/main/default/objects/Account/listViews/All_Accounts.listView-meta.xml
<ListView>
    <fullName>All_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>CLG__c</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>ACCOUNT.ADDRESS1_ZIP</columns>
    <columns>CPID__c</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>PC_PHONE3</columns>
    <columns>FinServ__KYCStatus__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Accounts</label>
    <sharedTo>
        <roleAndSubordinatesInternal>Banker_Line_Manager</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>Capability_Quality_C_Q_Team</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>Customer_Resolution_Leadership</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>Data_Analyst</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>IDR_Content_Writer</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>Systemic_Issue_Team</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>Tech_Support</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>