force-app/main/default/objects/Account/listViews/All_CLG_Customers.listView-meta.xml
<ListView>
    <fullName>All_CLG_Customers</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>CLG__c</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>ACCOUNT.ADDRESS1_ZIP</columns>
    <columns>CPID__c</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>PC_PHONE3</columns>
    <columns>FinServ__KYCStatus__c</columns>
    <columns>Source_System_ID__c</columns>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.CLG</value>
    </filters>
    <filterScope>Everything</filterScope>
    <label>All CLG Customers</label>
    <sharedTo>
        <roleAndSubordinates>Banker_Line_Manager</roleAndSubordinates>
        <roleAndSubordinates>Capability_Quality_C_Q_Team</roleAndSubordinates>
        <roleAndSubordinates>Customer_Resolution_Leadership</roleAndSubordinates>
        <roleAndSubordinates>Data_Analyst</roleAndSubordinates>
        <roleAndSubordinates>IDR_Content_Writer</roleAndSubordinates>
        <roleAndSubordinates>Systemic_Issue_Team</roleAndSubordinates>
        <roleAndSubordinates>Tech_Support</roleAndSubordinates>
        <roleAndSubordinates>ANZx</roleAndSubordinates>
        <roleAndSubordinates>Engineer</roleAndSubordinates>
        <roleAndSubordinates>SVP_Customer_Experience</roleAndSubordinates>
    </sharedTo>
</ListView>