force-app/main/default/objects/Account/listViews/All_Organisation_Customers.listView-meta.xml
<ListView>
    <fullName>All_Organisation_Customers</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>CLG__c</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>ACCOUNT.ADDRESS1_ZIP</columns>
    <columns>CPID__c</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>PC_PHONE3</columns>
    <columns>FinServ__KYCStatus__c</columns>
    <columns>Source_System_ID__c</columns>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Business_Account</value>
    </filters>
    <filterScope>Everything</filterScope>
    <label>All Organisation Customers</label>
    <sharedTo>
        <roleAndSubordinatesInternal>Banker_Line_Manager</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>Capability_Quality_C_Q_Team</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>Customer_Resolution_Leadership</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>Data_Analyst</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>IDR_Content_Writer</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>Systemic_Issue_Team</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>Tech_Support</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>ANZx</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>Engineer</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>SVP_Customer_Experience</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>