force-app/main/default/objects/Account/listViews/ANZ_Plus_customers_with_Deceased_Date.listView-meta.xml
<ListView>
    <fullName>ANZ_Plus_customers_with_Deceased_Date</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Deceased_Date__c</columns>
    <columns>OCV_ID__c</columns>
    <columns>Source_System_ID__c</columns>
    <columns>FinServ__PrimaryAddressIsMailing__pc</columns>
    <columns>PC_BIRTHDATE</columns>
    <filters>
        <field>Deceased_Date__c</field>
        <operation>notEqual</operation>
    </filters>
    <filterScope>Everything</filterScope>
    <label>ANZ Plus customers with Deceased Date</label>
    <sharedTo>
        <role>BOH_Coach</role>
        <role>BOH_Coach_Lead</role>
        <role>Business_Admin</role>
        <role>Card_Dispute_Agent</role>
        <role>Coach</role>
        <role>Coach_Lead</role>
        <role>FinCrime_Agent</role>
        <role>FraudX_Agent</role>
        <role>Quality_Analyst</role>
        <role>Quality_Capability_Lead</role>
        <role>Support_Coach</role>
        <role>X3rd_Party_Mobile_Support_Team</role>
    </sharedTo>
</ListView>