force-app/main/default/objects/Account/listViews/DeceasedCustomersWithoutCases.listView-meta.xml
<ListView>
    <fullName>DeceasedCustomersWithoutCases</fullName>
    <booleanFilter>1 AND 2</booleanFilter>
    <columns>ACCOUNT.NAME</columns>
    <columns>Display_Name__c</columns>
    <columns>External_Id__c</columns>
    <columns>DeceasedEstateStatus__c</columns>
    <columns>OCV_ID__pc</columns>
    <columns>PC_EMAIL</columns>
    <columns>Mobile__c</columns>
    <filters>
        <field>Display_Name__c</field>
        <operation>equals</operation>
        <value>EXECUTOR</value>
    </filters>
    <filters>
        <field>DeceasedEstateStatus__c</field>
        <operation>equals</operation>
        <value>,Error</value>
    </filters>
    <filterScope>Everything</filterScope>
    <label>Deceased Customers Without Cases</label>
    <sharedTo>
        <roleAndSubordinates>Support_Coach</roleAndSubordinates>
    </sharedTo>
</ListView>