force-app/main/default/objects/Account/listViews/FinServ__My_Businesses.listView-meta.xml
<ListView>
    <fullName>FinServ__My_Businesses</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>ACCOUNT.INDUSTRY</columns>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.FinServ__IndustriesBusiness</value>
    </filters>
    <filterScope>Mine</filterScope>
    <label>My Businesses</label>
    <sharedTo>
        <roleAndSubordinates>Banker_Line_Manager</roleAndSubordinates>
        <roleAndSubordinates>Capability_Quality_C_Q_Team</roleAndSubordinates>
        <roleAndSubordinates>Customer_Resolution_Leadership</roleAndSubordinates>
        <roleAndSubordinates>Data_Analyst</roleAndSubordinates>
        <roleAndSubordinates>IDR_Content_Writer</roleAndSubordinates>
        <roleAndSubordinates>Systemic_Issue_Team</roleAndSubordinates>
        <roleAndSubordinates>Tech_Support</roleAndSubordinates>
    </sharedTo>
</ListView>