force-app/main/default/objects/Account/listViews/FinServ__My_Clients.listView-meta.xml
<ListView>
    <fullName>FinServ__My_Clients</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>FinServ__TotalFinancialAccounts__c</columns>
    <columns>FinServ__AUM__c</columns>
    <columns>FinServ__WalletShare__c</columns>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.FinServ__IndustriesIndividual</value>
    </filters>
    <filters>
        <field>FinServ__IndividualType__c</field>
        <operation>equals</operation>
        <value>Individual</value>
    </filters>
    <filterScope>Mine</filterScope>
    <label>My Clients</label>
    <sharedTo>
        <roleAndSubordinates>Banker_Line_Manager</roleAndSubordinates>
        <roleAndSubordinates>Capability_Quality_C_Q_Team</roleAndSubordinates>
        <roleAndSubordinates>Customer_Resolution_Leadership</roleAndSubordinates>
        <roleAndSubordinates>Data_Analyst</roleAndSubordinates>
        <roleAndSubordinates>IDR_Content_Writer</roleAndSubordinates>
        <roleAndSubordinates>Systemic_Issue_Team</roleAndSubordinates>
        <roleAndSubordinates>Tech_Support</roleAndSubordinates>
    </sharedTo>
</ListView>