force-app/main/default/objects/Account/listViews/FinServ__My_Groups.listView-meta.xml
<ListView>
    <fullName>FinServ__My_Groups</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>FinServ__TotalFinancialAccounts__c</columns>
    <columns>FinServ__AUM__c</columns>
    <columns>FinServ__WalletShare__c</columns>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.FinServ__IndustriesHousehold</value>
    </filters>
    <filters>
        <field>FinServ__IndividualType__c</field>
        <operation>equals</operation>
        <value>Group</value>
    </filters>
    <filterScope>Mine</filterScope>
    <label>My Groups</label>
    <sharedTo>
        <roleAndSubordinatesInternal>Banker_Line_Manager</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>Capability_Quality_C_Q_Team</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>Customer_Resolution_Leadership</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>Data_Analyst</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>IDR_Content_Writer</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>Systemic_Issue_Team</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>Tech_Support</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>